--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Custom CSS */
         .login-container {
@@ -32,6 +33,7 @@
             width: 50%;
             background-image: url("assets/Capture-removebg-preview.png");
             background-size: cover;
+            opacity: 30;
         }
 
         .social-icons {
@@ -62,7 +64,7 @@
     <div class="container login-container">
         <div class="left-side">
             <!-- PiSocial Logo -->
-            <div class="pisocial" style="position: absolute; top: 10px; left: 20px;"><i>PiSocial</i></div>
+            <div class="pisocial" style="position: absolute; top: 10px; left: 50px;"><i>PiSocial</i></div>
 
             <!-- Social Media Signup Options -->
             <div class="social-icons">
