--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="path/to/fontawesome.css"> <!-- Link to local FontAwesome CSS -->
+    <script src="index.js"></script>
 
 </head>
 <body>
