--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             <!-- Signup Form -->
             <form>
                 <div class="form-group">
+
                     <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                    <input type="email" class="form-control email_field" id="email" placeholder="Enter your email">
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
