--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container login-container">
         <div class="left-side">
             <!-- PiSocial Logo -->
-            <div class="pisocial" style="position: absolute; top: 10px; left: 50px;"><i>PiSocial</i></div>
+            <!-- <div class="pisocial" style="position: absolute; top: 10px; left: 50px;"><i>PiSocial</i></div> -->
 
             <!-- Social Media Signup Options -->
             <div class="social-icons">
